
In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

17th Feb 2021
- USER (dev): Software version number in recipe is now the Git branch and commit hash

10th Feb 2021
- USER (dev): support report can now be generated from the Tools menu.
- USER (dev): fix bug related to numOverlapZPlanes recipe setting being stuck at >0 once it's been changed.
- USER (dev): do not start auto-trim if user simply closes the auto-trim dialog.
- USER (dev): SIBT settings removed from componentSettings.m


9th Feb 2021
- USER (dev/prerelease): fix bug relate to acquisition resume on reso scanner systems. 
- USER (dev/prerelease): autoROI uses the lowest wavelength channel. NOTE: requires channels to be named in ScanImage: "Red", "Green", "Blue"


8th Feb 2021
- USER (dev/prerelease): acquisition resume now applies more scanner settings than before. e.g. spatial fill fraction, pixel integration values (galvo), and scanner offsets. 
- USER: various bug-fixes to acquisition resume.
- USER: "Recipe" button displays "LOADING" during acquisition resumes that are slow.


6th Feb 2021
- USER: Add Ensemble class for AeroTech controllers. (NOTE: in future we want to merge this somehow with Soloist)



4th Feb 2021
- DEVELOPER - saved autoROI stats for logging now contain the image and binary mask used for each section. 
- DEVELOPER - refactor of some autoROI code


20th Jan 2021
- User: fixed bug that caused autoROI tile pattern to only be correct for a tile overlap of 10%


15th Jan 2021
- User/super-user: scanner setting YAML can now set fast and slow offsets and also spatial fill fraction


10th December 2020
- User: On bake completion only a single Slack message is now sent.


3rd December 2020
- User MAJOR CHANGES: 
BakingTray now has an "Auto-ROI" feature. This is documented at https://bakingtray.mouse.vision. 